--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -5,7 +6,7 @@
     font-family: sans-serif;
 }
 .navbar{
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: rgba(5, 5, 5, 0.3);
    padding: 23px;
 }
 .navdiv{
@@ -34,6 +35,7 @@ li a{
       color: white;
 }
 button{
+    background-color: rgba(245, 246, 247, 0.4);
      border-radius: 10px;
      padding: 12px 17px;
      border: 1px solid black;
@@ -47,13 +49,9 @@ button a{
     border-radius: 50%;
 }
 .first.text{
-    font-weight: bold;
-    font-size: 25px;
-}
-.second.text{
     font-size: 47px;
     font-weight: bold;
-    color: black;
+    color: rgb(8, 157, 202);
 }
 .container{
     display: flex;
@@ -61,6 +59,7 @@ button a{
     justify-content: space-around;
     margin-top: 55px;
 }
-.third.text{
+.second.text{
+    font-size: 30px;
     color: #259b9b;
 }
